[gd_scene load_steps=22 format=3 uid="uid://cp6bpg6fld8b0"]

[ext_resource type="Script" path="res://scenes/game_object/enemy/basic_enemy/basic_enemy.gd" id="1_i32oj"]
[ext_resource type="PackedScene" uid="uid://8yyybjo61tko" path="res://scenes/component/health_component/health_component.tscn" id="2_8nioh"]
[ext_resource type="PackedScene" uid="uid://eqepkkue3u42" path="res://scenes/component/random_stream_player_2d_component/random_stream_player_2d_component.tscn" id="2_dcybi"]
[ext_resource type="AudioStream" uid="uid://cnlpu3yp8g6uu" path="res://assets/audio/footstep_carpet_000.ogg" id="2_lyn8b"]
[ext_resource type="PackedScene" uid="uid://drf26ya2bc016" path="res://scenes/component/velocity_component/velocity_component.tscn" id="3_bc3q3"]
[ext_resource type="PackedScene" uid="uid://dt1p5hucw0viu" path="res://scenes/component/vial_drop_component/vial_drop_component.tscn" id="4_lr42a"]
[ext_resource type="AudioStream" uid="uid://cuo6fhnthqt8m" path="res://assets/audio/footstep_carpet_001.ogg" id="4_t70yo"]
[ext_resource type="PackedScene" uid="uid://c1jjjr1p5ufff" path="res://scenes/component/hit_flash_component/hit_flash_component.tscn" id="5_sqvrs"]
[ext_resource type="AudioStream" uid="uid://cuai6l43v3iwg" path="res://assets/audio/footstep_carpet_002.ogg" id="5_vf3jn"]
[ext_resource type="AudioStream" uid="uid://co8dck854j0h8" path="res://assets/audio/footstep_carpet_003.ogg" id="6_7gcvm"]
[ext_resource type="PackedScene" uid="uid://o0bw3qo1cxb3" path="res://scenes/component/death_component/death_component.tscn" id="6_7qv0w"]
[ext_resource type="Texture2D" uid="uid://bf5o8brr48ty1" path="res://scenes/game_object/enemy/basic_enemy/basic_enemy.png" id="6_ef21a"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component/hit_flash_component.gdshader" id="6_vfh8n"]
[ext_resource type="PackedScene" uid="uid://b0o52qx2odbi5" path="res://scenes/component/hurtbox_component/hurtbox_component.tscn" id="7_11m4j"]
[ext_resource type="AudioStream" uid="uid://besb77ega6vfe" path="res://assets/audio/footstep_carpet_004.ogg" id="7_oriye"]

[sub_resource type="Animation" id="Animation_iduoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}

[sub_resource type="Animation" id="Animation_vfc4u"]
resource_name = "walk"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-0.5, -0.5, -0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-0.5, -0.5, -0.5),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1.2, 1.2), Vector2(0.8, 0.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-0.5, -0.5, -0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-0.5, -0.5, -0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvap1"]
_data = {
"RESET": SubResource("Animation_iduoc"),
"walk": SubResource("Animation_vfc4u")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ngj88"]
resource_local_to_scene = true
shader = ExtResource("6_vfh8n")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dvtli"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ij5o3"]
radius = 7.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_i32oj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hvap1")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_8nioh")]
max_health = 5.0

[node name="VelocityComponent" parent="." instance=ExtResource("3_bc3q3")]
max_speed = 50
acceleration = 1.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_lr42a")]
drop_percent = 0.6
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_sqvrs")]
hit_flash_material = SubResource("ShaderMaterial_ngj88")
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_7qv0w")]
visible = false
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("2_dcybi")]
streams = Array[AudioStream]([ExtResource("2_lyn8b"), ExtResource("4_t70yo"), ExtResource("5_vf3jn"), ExtResource("6_7gcvm"), ExtResource("7_oriye")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_11m4j")]
visible = false
position = Vector2(0, -6)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_dvtli")
debug_color = Color(1, 1, 1, 0.419608)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -6)
texture = ExtResource("6_ef21a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_ij5o3")
